# WorldSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
includes/glad/: CMakeLists.txt
includes/glad/glad/: glad.c  glad.h
includes/stb_image/: CMakeLists.txt  stb_image.cpp
scripts/: build.sh  run.sh
src/application/: CMakeLists.txt
src/application/src/: main.cpp
src/ecs/: CMakeLists.txt
src/ecs/public_include/: helper.hpp  registry.hpp  storage.hpp
src/geodecy/: CMakeLists.txt  README.md
src/geodecy/public_include/: spheroid.hpp  spheroid.inl  spheroid_test.hpp  wgs84.hpp
src/geodecy/test/: CMakeLists.txt  wgs84_test.cpp
src/rendering/: CMakeLists.txt
src/rendering/planet/public_include/: camera.h  geometry.h  image.h  plane.h  planet.h  quadsphere.h  quadspherelod.h  shader.h  worldrender.h
src/rendering/planet/src/: quadsphere.cpp  worldrender.cpp
src/utility/math/: CMakeLists.txt
src/utility/math/public_include/: wgs84.h
src/utility/math/test/: CMakeLists.txt  wgs84_test.cpp
src/wms/: CMakeLists.txt
src/wms/public_include/: wms_capabilities.hpp
src/wms/src/: wms_capabilities.cpp
src/wms/test/wms_capabilities/: CMakeLists.txt
src/wmsclient/: CMakeLists.txt  README.md
src/wmsclient/public_include/: wms_capabilities.hpp  wms_client.hpp
src/wmsclient/src/: wms_capabilities.cpp  wms_client.cpp
src/wmsclient/test/wms_capabilities/: test_wms_capabilities.cpp
